--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "cross-env PORT=80 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -57,5 +57,8 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.6"
   },
-  "proxy": "http://localhost:5000"
+  "engines": {
+    "npm": "8.5.2",
+    "node": "16.15.0"
+  }
 }
